<resources>
    <string name="app_name">Github User App</string>
    <string name="main_title">Github User</string>
    <string name="item_detail_button">Detail</string>
    <string name="detail_username">Username</string>
    <string name="detail_company">Company</string>
    <string name="detail_location">Location</string>
    <string name="detail_repository">Repository</string>
    <string name="detail_follower">Follower</string>
    <string name="detail_following">Following</string>
</resources>